<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OCV Can Detection</string>
    <string name="title_activity_calibrate_can">CalibrateCanActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_home">Can Detection - OpenCVAndroidSDK</string>
    <string name="title_activity_main">OPEN Robot Vision</string>
    <string name="calibrar_latas">Calibrar Latas</string>
    <string name="calibrar_mar">Calibrar Mar</string>
    <string name="calibrar_cont">Calibrar Contenedor</string>
    <string name="detectar">Detectar</string>
    <string name="title_activity_calibrate_see">CalibrateSeeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="driver">Driver</string>
    <string name="title_activity_can_detect">CanDetectActivity</string>
    <string name="can_detect">Detectar una Lata</string>
    <string name="title_activity_cont_detect">ContDetectActivity</string>
    <string name="cont_detect">Detectar el contenedor</string>
    <string name="title_activity_open_door">OpenDoorActivity</string>
	<string name="open_door">Abrir Compuerta</string>
</resources>