<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_home" />

    <Button
        android:id="@+id/buttonDetectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:text="@string/detectar" />

    <Button
        android:id="@+id/buttonCalibrarLatas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:text="@string/calibrar_latas" />

    <Button
        android:id="@+id/buttonCalibrarCont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonCalibrarMar"
        android:layout_alignBottom="@+id/buttonCalibrarMar"
        android:layout_alignRight="@+id/buttonDetectar"
        android:text="@string/calibrar_cont" />

    <Button
        android:id="@+id/buttonCalibrarMar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonCalibrarLatas"
        android:layout_below="@+id/buttonDetectar"
        android:layout_marginTop="33dp"
        android:text="@string/calibrar_mar" />

    <Button
        android:id="@+id/buttonCanDetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCalibrarMar"
        android:layout_below="@+id/buttonCalibrarCont"
        android:layout_marginTop="38dp"
        android:text="@string/can_detect" />

    <Button
        android:id="@+id/buttonContDetect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonCanDetect"
        android:layout_below="@+id/buttonCanDetect"
        android:layout_marginTop="26dp"
        android:text="@string/cont_detect" />

</RelativeLayout>